--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-model",
+  "name": "use-react-model",
   "version": "0.0.1",
   "description": "create state model with reducer and context",
   "source": "src/index.ts",
