chore: update package.json

--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "state",
     "model"
   ],
+  "author": "kangjs",
   "license": "MIT",
   "devDependencies": {
     "@types/react": "16.8",
-    "microbundle": "^0.15.0",
-    "react": "^16.8.0 || ^17.0.1 || ^18.0.0"
+    "microbundle": "^0.15.0"
   },
   "dependencies": {
     "react": "^16.8.0 || ^17.0.1 || ^18.0.0"
